<resources>
    <string name="app_name">072 App Brain Trainer</string>
    <string name="hide">invisible</string>
    <string name="sec">30s</string>
    <string name="score">0/0</string>
    <string name="message">Choose..!!!</string>
    <string name="verify">verify</string>
    <string name="btn1">btn1</string>
    <string name="btn2">btn2</string>
    <string name="btn3">btn3</string>
    <string name="btn4">btn4</string>
    <string name="cock">Cock</string>
</resources>
