<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:backgroundTint="@android:color/black"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/frontpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:background="@android:color/black"
        android:onClick="@string/hide"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cock"
            app:srcCompat="@drawable/go" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time"
                android:layout_width="77dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:gravity="fill"
                android:text="@string/sec"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ques"
                android:layout_width="263dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:gravity="fill"
                android:text="@string/score"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/scoree"
                android:layout_width="77dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_green_light"
                android:gravity="fill"
                android:text="@string/score"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="309dp"
            app:columnCount="2"
            app:rowCount="2">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#071E99"


                android:onClick="@string/verify"
                android:tag="0"
                android:text="@string/btn1"
                android:textSize="36sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F8FAE104"


                android:onClick="@string/verify"
                android:tag="1"

                android:text="@string/btn2"
                android:textSize="36sp"
                app:layout_column="1"
                app:layout_columnWeight="1"

                app:layout_gravity="fill"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6B0972"
                android:onClick="@string/verify"
                android:tag="2"

                android:text="@string/btn3"
                android:textSize="36sp"
                app:layout_column="0"
                app:layout_columnWeight="1"

                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F44336"
                android:onClick="@string/verify"
                android:tag="3"

                android:text="@string/btn4"
                android:textSize="36sp"
                app:layout_column="1"
                app:layout_columnWeight="1"

                app:layout_gravity="fill"
                app:layout_row="1"
                app:layout_rowWeight="1" />
        </android.support.v7.widget.GridLayout>

        <TextView
            android:id="@+id/messagee"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:gravity="fill"
            android:text="@string/message"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="36sp"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>
